# d435-based-localization-on-ubuntu20.04

./: .gitignore  00.sh  01.sh  02.sh  03.sh  1.WHEELTEC_H30惯导模块用户手册.md  Intel D435 Ubuntu20.04 全流程配置与高精度定位技术文档.md  SERIAL_TROUBLESHOOTING.md  detect_serials.sh  diagnose_serial.py  mapping.sh  monitor_both.py  monitor_serial.sh  smart_detect.py  t265_odom_handler.py  比赛全流程操作指南.md
catkin_ws/src/d435_h30_localization/: CMakeLists.txt  package.xml
catkin_ws/src/d435_h30_localization/config/: d435_race_track.json  d435_race_track.yaml  d435_race_track_fast_motion.json
catkin_ws/src/d435_h30_localization/launch/: camera_only.launch  d435_h30.launch  d435_h30_cad.launch  d435_h30_full.launch  d435_h30_rviz.launch  d435_imu.launch  d435_imu_cad.launch  mapping.launch
catkin_ws/src/d435_h30_localization/scripts/: cad_icp_localizer.py  d435_apply_params.sh  detect_serial.py  h30_imu_driver.py  rtabmap_odom_handler.py  serial_monitor.py
catkin_ws/src/yesense_imu/launch/: yesense.launch
d435_h30_localization/: CMakeLists.txt  USAGE_GUIDE.md
d435_h30_localization/launch/: camera_only.launch  d435_h30_full.launch  d435_h30_rviz.launch  d435_imu.launch  d435_imu_cad.launch  imu_only.launch
d435_h30_localization/scripts/: debug_yesense.py  rtabmap_odom_handler.py  serial_assistant.py  serial_monitor.py  yesense_imu_driver.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/d435_h30_localization/lib/d435_h30_localization/: h30_imu_driver.py  h30_imu_driver_debug.py
ros2_ws/install/d435_h30_localization/share/ament_index/resource_index/package_run_dependencies/: d435_h30_localization
ros2_ws/install/d435_h30_localization/share/d435_h30_localization/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/d435_h30_localization/share/d435_h30_localization/calib/: camchain_example.yaml
ros2_ws/install/d435_h30_localization/share/d435_h30_localization/cmake/: d435_h30_localizationConfig.cmake
ros2_ws/install/d435_h30_localization/share/d435_h30_localization/launch/: d435_h30.launch.py  d435_h30_rviz.launch  d435_h30_rviz.launch.py  imu_debug.launch.py  imu_only.launch  imu_only.launch.py  imu_only_official.launch  imu_only_simple.launch.py  imu_with_rviz.launch.py
ros2_ws/install/d435_h30_localization/share/d435_h30_localization/rviz/: imu.rviz
ros2_ws/log/: latest_build
ros2_ws/src/d435_h30_localization/: README.md  USAGE_GUIDE.md
ros2_ws/src/d435_h30_localization/calib/: aprilgrid_6x8_20mm.yaml  imu_calib_example.yaml
ros2_ws/src/d435_h30_localization/launch/: d435_h30.launch  d435_h30_cad.launch  d435_h30_official.launch
ros2_ws/src/d435_h30_localization/scripts/: debug_baudrates.py  debug_serial.py  test_imu_raw.py
